--- a/index.html
+++ b/index.html
@@ -1,126 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <title>Streamline SMP - Vanilla Minecraft Server</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="index.css" />
+    <link rel="icon" href="Images/server-icon.png" />
+  </head>
 
-<head>
-  <title>Streamline SMP - Vanilla Minecraft Server</title>
-  <link rel="stylesheet" href="styles.css">
-  <link rel="stylesheet" href="index.css">
-  <link rel="icon" href="Images/server-icon.png" />
-</head>
-
-
-
-<body class="dark-mode">
-  <div class="page-container">
-    <header>
-      <a href="./index.html">
-        <p class="title dark-mode">STREAMLINE SMP</p>
-      </a>
-      <nav>
-        <div class="container">
-          <div class="hamburger" id="hamburger">
-            <input class="menu-toggle" type="checkbox">
-            <span class="line"></span>
-            <span class="line"></span>
-            <span class="line"></span>
+  <body class="dark-mode">
+    <div class="page-container">
+      <header>
+        <a href="./index.html">
+          <p class="title dark-mode">STREAMLINE SMP</p>
+        </a>
+        <nav>
+          <div class="container">
+            <div class="hamburger" id="hamburger">
+              <input class="menu-toggle" type="checkbox" />
+              <span class="line"></span>
+              <span class="line"></span>
+              <span class="line"></span>
+            </div>
           </div>
+          <ul>
+            <a href="./index.html">
+              <li class="dark-mode">HOME</li>
+            </a>
+            <a href="./join.html">
+              <li>JOIN</li>
+            </a>
+            <a href="./about.html">
+              <li>ABOUT</li>
+            </a>
+            <a href="./about.html">
+              <li>COMMUNITY</li>
+            </a>
+          </ul>
+        </nav>
+      </header>
+      <main class="main-content">
+        <h1>REASONS TO JOIN STREAMLINE</h1>
+        <article class="grid">
+          <div class="block purple column grid-row-span-2">
+            <h2>ECONOMY:</h2>
+            <p>
+              The economy on Streamline is based on diamonds, it works much like
+              the real economy, with buys and sales using one central currency.
+            </p>
+            <p>
+              You can become a tycoon and make thousands of diamonds, or you can
+              just stop by the shopping district whenever you need some
+              materials.
+            </p>
+            <p>
+              The economy adds incredible potential to everyone's experience and
+              it speeds up the survival gameplay allowing you to skip to what
+              you love!
+            </p>
+          </div>
+          <div class="block blue column">
+            <h2>NO CLAIMING:</h2>
+            <p>
+              Streamline is a whitelist-only Minecraft server, meaning there is
+              no need for those annoying claim features you find on public SMPs.
+            </p>
+            <p>Just choose a place and start building!</p>
+          </div>
+          <div class="block red grid-col-span-2">
+            <h2>COMMUNITY:</h2>
+            <p>
+              Our community is by far one of the number one reasons to join
+              Streamline. We have a very active and talented community of people
+              making incredible things everyday on the server! With over 100
+              players and growing, there's always somebody to hang out with.
+            </p>
+            <p>
+              We appreciate every new addition to our community and can't wait
+              to see you join it! Feel free to check any of the
+              <a
+                style="color: black; text-decoration: underline"
+                href="./community.html"
+                >Streamline social media</a
+              >
+              to talk with us!
+            </p>
+          </div>
+          <div class="block yellow grid-col-span-2">
+            <h2>A SERVER FOR ALL:</h2>
+            <p>
+              The entire point of Streamline in the first place was to create a
+              whitelist server that anyone who wants to join, can. We have
+              overwhelmingly accomplished that goal, with an incredibly diverse
+              community of people all around the world and all different
+              backgrounds!
+            </p>
+            <p>
+              It doesn't matter where you're from or who you are, we support
+              everyone! We love each and every player that joins Streamline and
+              look forward to anyone that wants to be a part of our community.
+            </p>
+          </div>
+          <div class="block green column">
+            <h2>TRUST-BASED RULES:</h2>
+            <p>
+              With trust-based rules there is no need for pesky plugins or
+              limitations getting in the way of your gameplay.
+            </p>
+            <p>
+              Streamliners never need to deal with getting around build
+              restrictions or annoying alerts.
+            </p>
+          </div>
+          <a href="./join.html" class="block join-btn">JOIN</a>
+        </article>
+      </main>
+      <footer>
+        <p>© 2022 ALL RIGHTS RESERVED</p>
+        <div class="extra-links">
+          <p><a class="link dark-mode" href="">SPONSOR US</a></p>
+          <p><a class="link dark-mode" href="">DONATE</a></p>
+          <p><a class="link dark-mode" href="">BUSINESS INQUIRIES</a></p>
         </div>
-        <ul>
-          <a href="./index.html">
-            <li class="dark-mode">HOME</li>
-          </a>
-          <a href="./join.html">
-            <li>JOIN</li>
-          </a>
-          <a href="./about.html">
-            <li>ABOUT</li>
-          </a>
-          <a href="./about.html">
-            <li>COMMUNITY</li>
-          </a>
-        </ul>
-      </nav>
-    </header>
-    <main class="main-content">
-      <h1>REASONS TO JOIN STREAMLINE</h1>
-      <article class="grid">
-        <div class="block purple column grid-row-span-2">
-          <h2>ECONOMY:</h2>
-          <p>
-            The economy on Streamline is based on diamonds, it works much like the real economy, with buys and sales
-            using
-            one central currency.
-          </p>
-          <p>
-            You can become a tycoon and make thousands of diamonds, or you can just stop by the shopping district
-            whenever
-            you need some materials.
-          </p>
-          <p>
-            The economy adds incredible potential to everyone's experience and it speeds up the survival gameplay
-            allowing
-            you to skip to what you love!
-          </p>
-        </div>
-        <div class="block blue column">
-          <h2>NO CLAIMING:</h2>
-          <p>
-            Streamline is a whitelist-only Minecraft server, meaning there is no need for those annoying claim features
-            you find on public SMPs.
-          </p>
-          <p>
-            Just choose a place and start building!
-          </p>
-        </div>
-        <div class="block red grid-col-span-2">
-          <h2>COMMUNITY:</h2>
-          <p>
-            Our community is by far one of the number one reasons to join Streamline. We have a very active and talented
-            community of people making incredible things everyday on the server! With over 100 players and growing,
-            there's always somebody to hang out with.
-          </p>
-          <p>
-            We appreciate every new addition to our community and can't wait to see you join it! Feel free to check any
-            of
-            the <a style="color: black; text-decoration: underline;" href="./community.html">Streamline social media</a>
-            to talk with us!
-          </p>
-        </div>
-        <div class="block yellow grid-col-span-2">
-          <h2>A SERVER FOR ALL:</h2>
-          <p>
-            The entire point of Streamline in the first place was to create a whitelist server that anyone who wants to
-            join, can. We have overwhelmingly accomplished that goal, with an incredibly diverse community of people all
-            around the world and all different backgrounds!
-          </p>
-          <p>
-            It doesn't matter where you're from or who you are, we support everyone! We love each and every player that
-            joins
-            Streamline and look forward to anyone that wants to be a part of our community.
-          </p>
-        </div>
-        <div class="block green column">
-          <h2>TRUST-BASED RULES:</h2>
-          <p>
-            With trust-based rules there is no need for pesky plugins or limitations getting in the way of your
-            gameplay.
-          </p>
-          <p>
-            Streamliners never need to deal with getting around build restrictions or annoying alerts.
-          </p>
-        </div>
-        <a href="./join.html" class="block join-btn">JOIN</a>
-      </article>
-    </main>
-    <footer>
-      <p>© 2022 ALL RIGHTS RESERVED </p>
-      <div class="extra-links">
-        <p><a class="link dark-mode" href="">SPONSOR US</a></p>
-        <p><a class="link dark-mode" href="">DONATE</a></p>
-        <p><a class="link dark-mode" href="">BUSINESS INQUIRIES</a></p>
-      </div>
-    </footer>
-  </div>
-</body>
-
+      </footer>
+    </div>
+  </body>
 </html>
