The Hamburger Menu is Finished!

--- a/index.html
+++ b/index.html
@@ -7,24 +7,22 @@
     <link rel="icon" href="Images/server-icon.png" />
   </head>
 
-  <body class="dark-mode">
+  <body class="">
     <div class="page-container">
       <header>
         <a href="./index.html">
-          <p class="title dark-mode">STREAMLINE SMP</p>
+          <p class="title">STREAMLINE SMP</p>
         </a>
-        <nav>
-          <div class="container">
-            <div class="hamburger" id="hamburger">
-              <input class="menu-toggle" type="checkbox" />
-              <span class="line"></span>
-              <span class="line"></span>
-              <span class="line"></span>
-            </div>
-          </div>
-          <ul>
+        <nav class="main-navigation" role="navigation">
+          <input class="menu-toggle" type="checkbox" />
+          <!-- Start of hamburger -->
+          <span class="line first-line"></span>
+          <span class="line secound-line"></span>
+          <span class="line third-line"></span>
+          <!-- End of hamburger -->
+          <ul class="nav-list">
             <a href="./index.html">
-              <li class="dark-mode">HOME</li>
+              <li class="current-pg">HOME</li>
             </a>
             <a href="./join.html">
               <li>JOIN</li>
@@ -117,9 +115,9 @@
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
-          <p><a class="link dark-mode" href="">SPONSOR US</a></p>
-          <p><a class="link dark-mode" href="">DONATE</a></p>
-          <p><a class="link dark-mode" href="">BUSINESS INQUIRIES</a></p>
+          <p><a class="link" href="">SPONSOR US</a></p>
+          <p><a class="link" href="">DONATE</a></p>
+          <p><a class="link" href="">BUSINESS INQUIRIES</a></p>
         </div>
       </footer>
     </div>
