Fixed some hamburger menu stuff

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="Images/server-icon.png" />
   </head>
 
-  <body class="">
+  <body>
     <div class="page-container">
       <header>
         <a href="./index.html">
@@ -37,7 +37,7 @@
         </nav>
       </header>
       <main class="main-content">
-        <h1>REASONS TO JOIN STREAMLINE</h1>
+        <h1>WELCOME TO STREAMLINE</h1>
         <article class="grid">
           <div class="block purple column grid-row-span-2">
             <h2>ECONOMY:</h2>
