--- a/join.html
+++ b/join.html
@@ -30,7 +30,7 @@
             <a href="./about.html">
               <li>ABOUT</li>
             </a>
-            <a href="./about.html">
+            <a href="./community.html">
               <li>COMMUNITY</li>
             </a>
           </ul>
@@ -79,8 +79,11 @@
               application gets declined, you can contact staff if you want to
               redo the application.
             </p>
-            <p>Here's a video explanation in case you get lost:</p>
+            <p class="video">
+              Here's a video explanation in case you get lost:
+            </p>
             <iframe
+              class="video"
               width="550"
               height="315"
               src="https://www.youtube.com/embed/tgbNymZ7vqY"
