--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="./about.html">
               <li>ABOUT</li>
             </a>
-            <a href="./about.html">
+            <a href="./community.html">
               <li>COMMUNITY</li>
             </a>
           </ul>
