JOIN page is now better

--- a/join.html
+++ b/join.html
@@ -39,45 +39,69 @@
       <main class="main-content">
         <h1 class="main-header green">HOW TO JOIN</h1>
         <article class="grid">
-          <div class="block num purple">
-            <h2>1.</h2>
+          <div>
+            <div class="block num purple">
+              <h2>1: Join the Discord</h2>
+            </div>
+            <div class="block">
+              <p>
+                Join the Discord if you haven't already. Having a Discord
+                account is required to join, if you do not have one, you can
+                make one for free on
+                <a
+                  style="color: white; text-decoration: underline"
+                  target="”_blank”"
+                  href="https://www.discord.com"
+                  >Discord's website</a
+                >. Once you have joined the Discord go to the
+                #applications-and-info channel.
+              </p>
+              <p>
+                Once you have joined the Discord go to the
+                <a
+                  style="color: white; text-decoration: underline"
+                  target="”_blank”"
+                  href="https://discord.gg/EAe4S6HdVC"
+                  >#applications-and-info
+                </a>
+                channel.
+              </p>
+            </div>
           </div>
-          <div class="block">
-            <p>
-              The first thing todo on your mission to join Streamline is easy!
-              Just join the Discord server. After that you will be able to chat
-              with current Streamliners and you will have access to the
-              application!
-            </p>
-            <p>
-              At this point if you have any questions you can DM any staff
-              members.
-            </p>
+          <div>
+            <div class="block num yellow">
+              <h2>2: Fill out Google Form</h2>
+            </div>
+            <div class="block">
+              <p>
+                The questions aren't that difficult but try to be as detailed as
+                possible. We have an acceptance rate of about 70% so good luck!
+                The questions are here to make sure that everyone who joins
+                Streamline will follow the rules and contribute to the server.
+                <a
+                  class="button"
+                  target="_blank"
+                  href="https://forms.gle/XXNQ7xodfyhKRneK6"
+                  >Fill out the form</a
+                >
+              </p>
+            </div>
           </div>
-          <div class="block num yellow">
-            <h2>2.</h2>
-          </div>
-          <div class="block">
-            <p>
-              The next thing is also quite simple, just fill out this Google
-              Form, this form is how we make sure that the best of people get
-              into Streamline, with an acceptence rate of around 85%. We belive
-              that you will make it!
-            </p>
-            <p>
-              You can also find the form in the #applications-and-info channel
-              on the Discord.
-            </p>
-          </div>
-          <div class="block num blue">
-            <h2>3.</h2>
-          </div>
-          <div class="block dark-mode">
-            <p>
-              Once you are done filling out the form, just wait until you get
-              alerted that you have been accepted, or you will get a DM if your
-              application gets declined, you can contact staff if you want to
-              redo the application.
+          <div>
+            <div class="block num blue">
+              <h2>3: That's it!</h2>
+            </div>
+            <div class="block dark-mode">
+              <p>
+                The form has been submitted. Next a staff member will review
+                your application. The wait is usually no more than 24 hours. If
+                you have any questions please ask our staff or you can DM me
+                directly.
+              </p>
+            </div>
+            <p class="video-txt">
+              Here's a video explanation in case you get lost:
+              <a class="button" target="”_blank”" href="#">Tutorial Video</a>
             </p>
             <p class="video">
               Here's a video explanation in case you get lost:
