fixed issue with join page, and added Discord integration!

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               restrictions or annoying alerts.
             </p>
           </div>
-          <a href="./join.html" class="block join-btn">JOIN</a>
+          <a class="button" href="./join.html">Join</a>
         </article>
       </main>
       <footer>
