--- a/join.html
+++ b/join.html
@@ -66,8 +66,23 @@
                 </a>
                 channel.
               </p>
+              <a
+                class="button"
+                target="_blank"
+                href="https://forms.gle/XXNQ7xodfyhKRneK6"
+                >Join the Discord</a
+              >
             </div>
           </div>
+          <iframe
+            class="show-desktop discord-embed"
+            src="https://discord.com/widget?id=775831180086870096&theme=dark"
+            width="350"
+            height="600"
+            allowtransparency="true"
+            frameborder="0"
+            sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
+          ></iframe>
           <div>
             <div class="block num yellow">
               <h2>2: Fill out Google Form</h2>
@@ -78,13 +93,13 @@
                 possible. We have an acceptance rate of about 70% so good luck!
                 The questions are here to make sure that everyone who joins
                 Streamline will follow the rules and contribute to the server.
-                <a
-                  class="button"
-                  target="_blank"
-                  href="https://forms.gle/XXNQ7xodfyhKRneK6"
-                  >Fill out the form</a
-                >
               </p>
+              <a
+                class="button"
+                target="_blank"
+                href="https://forms.gle/XXNQ7xodfyhKRneK6"
+                >Fill out the form</a
+              >
             </div>
           </div>
           <div>
@@ -99,15 +114,12 @@
                 directly.
               </p>
             </div>
-            <p class="video-txt">
-              Here's a video explanation in case you get lost:
-              <a class="button" target="”_blank”" href="#">Tutorial Video</a>
-            </p>
-            <p class="video">
-              Here's a video explanation in case you get lost:
-            </p>
+            <p>Here's a video explanation in case you get lost:</p>
+            <a class="button hide-desktop" target="”_blank”" href="#"
+              >Tutorial Video</a
+            >
             <iframe
-              class="video"
+              class="show-desktop"
               width="550"
               height="315"
               src="https://www.youtube.com/embed/tgbNymZ7vqY"
