Fixed "Join the Discord" button opening Google Form

--- a/join.html
+++ b/join.html
@@ -69,7 +69,7 @@
               <a
                 class="button"
                 target="_blank"
-                href="https://forms.gle/XXNQ7xodfyhKRneK6"
+                href="https://discord.gg/EAe4S6HdVC"
                 >Join the Discord</a
               >
             </div>
