Started on community page

--- a/community.html
+++ b/community.html
@@ -3,7 +3,7 @@
   <head>
     <title>Streamline SMP - Vanilla Minecraft Server</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="join.css" />
+    <link rel="stylesheet" href="community.css" />
     <link rel="icon" href="Images/server-icon.png" />
   </head>
 
@@ -36,7 +36,94 @@
           </ul>
         </nav>
       </header>
-      <main></main>
+      <main>
+        <div class="grid">
+          <a
+            target="”_blank”"
+            href="https://discord.gg/EAe4S6HdVC"
+            class="button"
+          >
+            <div class="icon">
+              <img
+                class="discord"
+                src="./Images/Community/Discord-Logo-Color.png"
+                alt="Discord Icon"
+              />
+            </div>
+            <h2>DISCORD</h2>
+          </a>
+          <a
+            href="https://www.youtube.com/channel/UCXg4U9_EQE_cKuU4PfZLn-w"
+            target="”_blank”"
+            class="button"
+          >
+            <div class="icon">
+              <img
+                class="youtube"
+                src="./Images/Community/yt_icon_rgb.png"
+                alt="YouTube Icon"
+              />
+            </div>
+            <h2>YouTube</h2>
+          </a>
+          <a
+            target="”_blank”"
+            href="https://twitter.com/streamlinesmp"
+            class="button"
+          >
+            <div class="icon">
+              <img
+                src="./Images/Community/2021 Twitter logo - blue.png"
+                alt="Twitter Icon"
+                class="twitter"
+              />
+            </div>
+            <h2>Twitter</h2>
+          </a>
+          <a
+            target="”_blank”"
+            href="https://www.reddit.com/r/StreamlineSMP/"
+            class="button"
+          >
+            <div class="icon">
+              <img
+                class="reddit"
+                src="./Images/Community/Reddit_Mark_OnWhite.png"
+                alt="Reddit Icon"
+              />
+            </div>
+            <h2>Reddit</h2>
+          </a>
+          <a
+            target="”_blank”"
+            href="https://www.instagram.com/streamlinesmp/"
+            class="button"
+          >
+            <div class="icon">
+              <img
+                src="./Images/Community/Instagram_Glyph_Gradient_RGB.png"
+                alt="Instagram Icon"
+                class="instagram"
+              />
+            </div>
+            <h2>Instagram</h2>
+          </a>
+          <a
+            target="”_blank”"
+            href="https://www.tiktok.com/@streamlinesmp"
+            class="button"
+          >
+            <div class="icon">
+              <img
+                src="./Images/Community/372102690_TIKTOK_LOGO_1080.png"
+                alt="TikTok Icon"
+                class="tiktok"
+              />
+            </div>
+            <h2>TikTok</h2>
+          </a>
+        </div>
+      </main>
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
