--- a/join.html
+++ b/join.html
@@ -124,7 +124,7 @@
               class="show-desktop"
               width="550"
               height="315"
-              src="https://www.youtube.com/embed/tgbNymZ7vqY"
+              src="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
             >
             </iframe>
           </div>
