--- a/join.html
+++ b/join.html
@@ -120,13 +120,7 @@
             <a class="button hide-desktop" target="”_blank”" href="#"
               >Tutorial Video</a
             >
-            <iframe
-              class="show-desktop"
-              width="550"
-              height="315"
-              src="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
-            >
-            </iframe>
+            <iframe width="1904" height="792" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </article>
       </main>
