--- a/join.html
+++ b/join.html
@@ -120,7 +120,7 @@
             <a class="button hide-desktop" target="”_blank”" href="#"
               >Tutorial Video</a
             >
-            <iframe width="1904" height="792" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="400px" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
         </article>
       </main>
