--- a/join.html
+++ b/join.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Streamline SMP - Vanilla Minecraft Server</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="join.css" />
@@ -118,12 +121,7 @@
             <a class="button hide-desktop" target="”_blank”" href="#"
               >Tutorial Video</a
             >
-            <iframe
-              class="show-desktop"
-              width="550"
-              height="315"
-              src="https://www.youtube.com/embed/tgbNymZ7vqY"
-            >
+            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </iframe>
           </div>
         </article>
