--- a/join.html
+++ b/join.html
@@ -121,7 +121,7 @@
             <a class="button hide-desktop" target="”_blank”" href="#"
               >Tutorial Video</a
             >
-            <iframe width="100%" height="300px" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe class="video show-desktop"  src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </iframe>
           </div>
         </article>
