--- a/join.html
+++ b/join.html
@@ -118,7 +118,7 @@
               </p>
             </div>
             <p>Here's a video explanation in case you get lost:</p>
-            <a class="button hide-desktop" target="”_blank”" href="#"
+            <a class="button hide-desktop" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
               >Tutorial Video</a
             >
             <iframe class="video show-desktop"  src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
