Fixed font overflow

--- a/community.html
+++ b/community.html
@@ -55,7 +55,7 @@
                 alt="Discord Icon"
               />
             </div>
-            <h3>DISCORD</h3>
+            <h3>Discord</h3>
           </a>
           <a
             href="https://www.youtube.com/channel/UCXg4U9_EQE_cKuU4PfZLn-w"
