changed text in community page

--- a/community.html
+++ b/community.html
@@ -40,7 +40,7 @@
         </nav>
       </header>
       <main>
-        <h1 class="main-header red">COMMUNITY</h1>
+        <h1 class="main-header red">JOIN THE CONVERSATION</h1>
         <h2 class="sub-header">OUR SOICAL MEDIA</h2>
         <div class="grid">
           <a
