Made home page be main domain for all buttons that link, removed 404 page

--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
   <body>
     <div class="page-container">
       <header>
-        <a href="./index.html">
+        <a href="./">
           <p class="title">STREAMLINE SMP</p>
         </a>
         <nav class="main-navigation" role="navigation">
@@ -23,7 +23,7 @@
           <span class="line third-line"></span>
           <!-- End of hamburger -->
           <ul class="nav-list">
-            <a href="./index.html">
+            <a href="./">
               <li>HOME</li>
             </a>
             <a href="./community.html">
