--- a/join.html
+++ b/join.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Streamline SMP - Vanilla Minecraft Server</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="stylesheet" href="join.css" />
@@ -13,7 +13,7 @@
   <body>
     <div class="page-container">
       <header>
-        <a href="./index.html">
+        <a href="./">
           <p class="title">STREAMLINE SMP</p>
         </a>
         <nav class="main-navigation" role="navigation">
@@ -24,7 +24,7 @@
           <span class="line third-line"></span>
           <!-- End of hamburger -->
           <ul class="nav-list">
-            <a href="./index.html">
+            <a href="./">
               <li>HOME</li>
             </a>
             <a href="./community.html">
@@ -118,10 +118,20 @@
               </p>
             </div>
             <p>Here's a video explanation in case you get lost:</p>
-            <a class="button hide-desktop" target="_blank" href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+            <a
+              class="button hide-desktop"
+              target="_blank"
+              href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
               >Tutorial Video</a
             >
-            <iframe class="video show-desktop"  src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe
+              class="video show-desktop"
+              src="https://www.youtube.com/embed/dQw4w9WgXcQ"
+              title="YouTube video player"
+              frameborder="0"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
           </div>
         </article>
       </main>
