--- a/community.html
+++ b/community.html
@@ -13,7 +13,7 @@
   <body>
     <div class="page-container">
       <header>
-        <a href="./index.html">
+        <a href="./">
           <p class="title">STREAMLINE SMP</p>
         </a>
         <nav class="main-navigation" role="navigation">
@@ -24,7 +24,7 @@
           <span class="line third-line"></span>
           <!-- End of hamburger -->
           <ul class="nav-list">
-            <a href="./index.html">
+            <a href="./">
               <li>HOME</li>
             </a>
             <a href="./community.html">
