--- a/join.html
+++ b/join.html
@@ -140,7 +140,7 @@
             <div class="block num green">
               <h2>Was I accepted?</h2>
             </div>
-            <div class="block">
+            <div class="block more-block">
               <p>
                 The way that you know if your application has been accepted is
                 you will receive a message that says you have been whitelisted
@@ -150,18 +150,50 @@
                 your application.
               </p>
               <p>Denied message:</p>
-              <img
-                class="more-img"
-                src="./Images/Join/denied-msg.png"
-                alt="An image depicting what the join message will look like."
-              />
+              <div class="disc">
+                <div class="disc-message">
+                  <img
+                    class="disc-account"
+                    src="./Images/Join/axolotl-pfp.png"
+                    alt="Profile picture for Dozoe"
+                  />
+                  <div class="disc-message-text">
+                    <div class="disc-top-text">
+                      <p>Dozoe</p>
+                      <p>Today at 9:00</p>
+                    </div>
+                    <div class="disc-btm-text">
+                      <p>
+                        Unfortunately, your application for Streamline SMP got
+                        denied. You can still stay on the Discord server and
+                        follow content through various channels if you wish to
+                        do so.
+                      </p>
+                    </div>
+                  </div>
+                </div>
+                <div class="disc-message-container">
+                  <svg
+                    class="disc-add-btn"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      fill="#b9bbbe"
+                      d="M12 2.00098C6.486 2.00098 2 6.48698 2 12.001C2 17.515 6.486 22.001 12 22.001C17.514 22.001 22 17.515 22 12.001C22 6.48698 17.514 2.00098 12 2.00098ZM17 13.001H13V17.001H11V13.001H7V11.001H11V7.00098H13V11.001H17V13.001Z"
+                    ></path>
+                  </svg>
+                  <p>Message @Dozoe</p>
+                </div>
+              </div>
             </div>
           </div>
           <div>
             <div class="block num red">
               <h2>After getting accepted</h2>
             </div>
-            <div class="block">
+            <div class="block more-block">
               <p>
                 Ok so you waited for your application to be reviewed and you
                 were accepted, congrats by the way! But now what? When you get
@@ -174,26 +206,36 @@
                 free, build something cool, and have fun!
               </p>
               <p>Accepted message:</p>
-              <div class="disc disc-accepted">
-                <div class="disc-message">
-                  <div class="disc-account"></div>
-                  <div class="disc-top-text">
-                    <p>Dozoe</p>
-                    <p>Today at 9:00</p>
-                  </div>
-                  <div class="disc-btm-text">
-                    <p>@Hex32</p>
-                    <p>
-                      Congrats, you are now a Streamliner! You will be
-                      whitelisted within a couple minutes. Thx for joining and
-                      have fun.
-                    </p>
+              <div class="disc">
+                <div class="disc-message disc-accepted">
+                  <img
+                    class="disc-account"
+                    src="./Images/Join/axolotl-pfp.png"
+                    alt="Profile picture for Dozoe"
+                  />
+                  <div class="disc-message-text">
+                    <div class="disc-top-text">
+                      <p>Dozoe</p>
+                      <p>Today at 9:00</p>
+                    </div>
+                    <div class="disc-btm-text">
+                      <p class="disc-highlight">@Hex32</p>
+                      <p>
+                        Congrats, you are now a Streamliner! You will be
+                        whitelisted within a couple minutes. Thx for joining and
+                        have fun.
+                      </p>
+                    </div>
                   </div>
                 </div>
                 <div class="disc-message-container">
-                  <svg width="24" height="24" viewBox="0 0 24 24">
+                  <svg
+                    class="disc-add-btn"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
                     <path
-                      class="disc-add-btn"
                       fill="#b9bbbe"
                       d="M12 2.00098C6.486 2.00098 2 6.48698 2 12.001C2 17.515 6.486 22.001 12 22.001C17.514 22.001 22 17.515 22 12.001C22 6.48698 17.514 2.00098 12 2.00098ZM17 13.001H13V17.001H11V13.001H7V11.001H11V7.00098H13V11.001H17V13.001Z"
                     ></path>
