Fixed footer and discord area

--- a/join.html
+++ b/join.html
@@ -43,10 +43,10 @@
         <h1 class="main-header green">HOW TO JOIN</h1>
         <article class="grid">
           <div>
-            <div class="block num purple">
-              <h2>1: Join the Discord</h2>
-            </div>
             <div class="block">
+              <div class="block num purple">
+                <h2>1: Join the Discord</h2>
+              </div>
               <p>
                 Join the Discord if you haven't already. Having a Discord
                 account is required to join, if you do not have one, you can
@@ -87,10 +87,10 @@
             sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"
           ></iframe>
           <div>
-            <div class="block num yellow">
-              <h2>2: Fill out Google Form</h2>
-            </div>
             <div class="block">
+              <div class="block num yellow">
+                <h2>2: Fill out Google Form</h2>
+              </div>
               <p>
                 The questions aren't that difficult but try to be as detailed as
                 possible. We have an acceptance rate of about 70% so good luck!
@@ -106,10 +106,10 @@
             </div>
           </div>
           <div>
-            <div class="block num blue">
-              <h2>3: That's it!</h2>
-            </div>
-            <div class="block dark-mode">
+            <div class="block">
+              <div class="block num blue">
+                <h2>3: That's it!</h2>
+              </div>
               <p>
                 The form has been submitted. Next a staff member will review
                 your application. The wait is usually no more than 24 hours. If
@@ -137,10 +137,10 @@
         <h2 class="sub-header">More</h2>
         <article class="grid lower-grid">
           <div>
-            <div class="block num green">
-              <h2>Was I accepted?</h2>
-            </div>
             <div class="block more-block">
+              <div class="block num green">
+                <h2>Was I accepted?</h2>
+              </div>
               <p>
                 The way that you know if your application has been accepted is
                 you will receive a message that says you have been whitelisted
@@ -149,51 +149,53 @@
                 not been accepted. However, you are more than welcome to redo
                 your application.
               </p>
-              <p>Denied message:</p>
-              <div class="disc">
-                <div class="disc-message">
-                  <img
-                    class="disc-account"
-                    src="./Images/Join/axolotl-pfp.png"
-                    alt="Profile picture for Dozoe"
-                  />
-                  <div class="disc-message-text">
-                    <div class="disc-top-text">
-                      <p>Dozoe</p>
-                      <p>Today at 9:00</p>
-                    </div>
-                    <div class="disc-btm-text">
-                      <p>
-                        Unfortunately, your application for Streamline SMP got
-                        denied. You can still stay on the Discord server and
-                        follow content through various channels if you wish to
-                        do so.
-                      </p>
+              <div class="disc-example">
+                <p>Denied message:</p>
+                <div class="disc">
+                  <div class="disc-message">
+                    <img
+                      class="disc-account"
+                      src="./Images/Join/axolotl-pfp.png"
+                      alt="Profile picture for Dozoe"
+                    />
+                    <div class="disc-message-text">
+                      <div class="disc-top-text">
+                        <p>Dozoe</p>
+                        <p>Today at 9:00</p>
+                      </div>
+                      <div class="disc-btm-text">
+                        <p>
+                          Unfortunately, your application for Streamline SMP got
+                          denied. You can still stay on the Discord server and
+                          follow content through various channels if you wish to
+                          do so.
+                        </p>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="disc-message-container">
-                  <svg
-                    class="disc-add-btn"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      fill="#b9bbbe"
-                      d="M12 2.00098C6.486 2.00098 2 6.48698 2 12.001C2 17.515 6.486 22.001 12 22.001C17.514 22.001 22 17.515 22 12.001C22 6.48698 17.514 2.00098 12 2.00098ZM17 13.001H13V17.001H11V13.001H7V11.001H11V7.00098H13V11.001H17V13.001Z"
-                    ></path>
-                  </svg>
-                  <p>Message @Dozoe</p>
+                  <div class="disc-message-container">
+                    <svg
+                      class="disc-add-btn"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                    >
+                      <path
+                        fill="#b9bbbe"
+                        d="M12 2.00098C6.486 2.00098 2 6.48698 2 12.001C2 17.515 6.486 22.001 12 22.001C17.514 22.001 22 17.515 22 12.001C22 6.48698 17.514 2.00098 12 2.00098ZM17 13.001H13V17.001H11V13.001H7V11.001H11V7.00098H13V11.001H17V13.001Z"
+                      ></path>
+                    </svg>
+                    <p>Message @Dozoe</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
           <div>
-            <div class="block num red">
-              <h2>After getting accepted</h2>
-            </div>
             <div class="block more-block">
+              <div class="block num red">
+                <h2>After getting accepted</h2>
+              </div>
               <p>
                 Ok so you waited for your application to be reviewed and you
                 were accepted, congrats by the way! But now what? When you get
@@ -205,42 +207,44 @@
                 you can now officially say you are a Streamliner! Now go be
                 free, build something cool, and have fun!
               </p>
-              <p>Accepted message:</p>
-              <div class="disc">
-                <div class="disc-message disc-accepted">
-                  <img
-                    class="disc-account"
-                    src="./Images/Join/axolotl-pfp.png"
-                    alt="Profile picture for Dozoe"
-                  />
-                  <div class="disc-message-text">
-                    <div class="disc-top-text">
-                      <p>Dozoe</p>
-                      <p>Today at 9:00</p>
-                    </div>
-                    <div class="disc-btm-text">
-                      <p class="disc-highlight">@Hex32</p>
-                      <p>
-                        Congrats, you are now a Streamliner! You will be
-                        whitelisted within a couple minutes. Thx for joining and
-                        have fun.
-                      </p>
+              <div class="disc-example">
+                <p>Accepted message:</p>
+                <div class="disc">
+                  <div class="disc-message disc-accepted">
+                    <img
+                      class="disc-account"
+                      src="./Images/Join/axolotl-pfp.png"
+                      alt="Profile picture for Dozoe"
+                    />
+                    <div class="disc-message-text">
+                      <div class="disc-top-text">
+                        <p>Dozoe</p>
+                        <p>Today at 9:00</p>
+                      </div>
+                      <div class="disc-btm-text">
+                        <p class="disc-highlight">@Hex32</p>
+                        <p>
+                          Congrats, you are now a Streamliner! You will be
+                          whitelisted within a couple minutes. Thx for joining
+                          and have fun.
+                        </p>
+                      </div>
                     </div>
                   </div>
-                </div>
-                <div class="disc-message-container">
-                  <svg
-                    class="disc-add-btn"
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                  >
-                    <path
-                      fill="#b9bbbe"
-                      d="M12 2.00098C6.486 2.00098 2 6.48698 2 12.001C2 17.515 6.486 22.001 12 22.001C17.514 22.001 22 17.515 22 12.001C22 6.48698 17.514 2.00098 12 2.00098ZM17 13.001H13V17.001H11V13.001H7V11.001H11V7.00098H13V11.001H17V13.001Z"
-                    ></path>
-                  </svg>
-                  <p>Message #general</p>
+                  <div class="disc-message-container">
+                    <svg
+                      class="disc-add-btn"
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                    >
+                      <path
+                        fill="#b9bbbe"
+                        d="M12 2.00098C6.486 2.00098 2 6.48698 2 12.001C2 17.515 6.486 22.001 12 22.001C17.514 22.001 22 17.515 22 12.001C22 6.48698 17.514 2.00098 12 2.00098ZM17 13.001H13V17.001H11V13.001H7V11.001H11V7.00098H13V11.001H17V13.001Z"
+                      ></path>
+                    </svg>
+                    <p>Message #general</p>
+                  </div>
                 </div>
               </div>
             </div>
