Updated footer links to work

--- a/join.html
+++ b/join.html
@@ -254,9 +254,16 @@
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
-          <p><a class="link" href="">SPONSOR US</a></p>
-          <p><a class="link" href="">DONATE</a></p>
-          <p><a class="link" href="">BUSINESS INQUIRIES</a></p>
+          <p><a class="link" href="./contact.html">CONTACT US</a></p>
+          <p>
+            <a
+              target="”_blank”"
+              class="link"
+              href="https://discord.com/channels/775831180086870096/786974659005644851"
+              >DONATE</a
+            >
+          </p>
+          <p><a class="link" href="./contact.html">BUSINESS INQUIRIES</a></p>
         </div>
       </footer>
     </div>
