--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
             <p>
               Have a question? We have the answer! If you don't see your
               question here you can always hit us up at our
-              <a class="sub-header-link" href="#">Contact Page</a>.
+              <a class="sub-header-link" href="./contact.html">Contact Page</a>.
             </p>
           </div>
           <div class="faq">
@@ -183,7 +183,7 @@
               <p>
                 If you have any questions about what is against the rules or
                 allowed,
-                <a href="#" class="block-link"
+                <a href="./contact.html" class="block-link"
                   >please contact a staff member to ask!</a
                 >
                 That is the best way to make sure that you stay safe and don't
@@ -226,9 +226,16 @@
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
-          <p><a class="link" href="">SPONSOR US</a></p>
-          <p><a class="link" href="">DONATE</a></p>
-          <p><a class="link" href="">BUSINESS INQUIRIES</a></p>
+          <p><a class="link" href="./contact.html">CONTACT US</a></p>
+          <p>
+            <a
+              target="”_blank”"
+              class="link"
+              href="https://discord.com/channels/775831180086870096/786974659005644851"
+              >DONATE</a
+            >
+          </p>
+          <p><a class="link" href="./contact.html">BUSINESS INQUIRIES</a></p>
         </div>
       </footer>
     </div>
