--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         </nav>
       </header>
       <main class="main-content">
-        <h1 class="main-header red">ABOUT</h1>
+        <h1 class="main-header yellow">ABOUT</h1>
         <article>
           <div class="sub-header">
             <h2>FREQUENTLY ASKED QUESTIONS</h2>
