Cleaned up more code | made gaps more consistant | Made the margin at the bottom of <main> uniform across all pages

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
       </header>
-      <main class="main-content">
+      <main>
         <h1 class="main-header yellow">ABOUT</h1>
         <article>
           <div class="sub-header">
