--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,9 @@
           </ul>
         </nav>
       </header>
-      <main></main>
+      <main>
+        <h1 class="main-header orange">Contact</h1>
+      </main>
       <footer>
         <p>© 2022 ALL RIGHTS RESERVED</p>
         <div class="extra-links">
