--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
       </header>
-      <main class="main-content">
+      <main>
         <h1>WELCOME TO STREAMLINE</h1>
         <article class="grid">
           <div class="block purple column grid-row-span-2">
