--- a/join.html
+++ b/join.html
@@ -39,7 +39,7 @@
           </ul>
         </nav>
       </header>
-      <main class="main-content">
+      <main>
         <h1 class="main-header green">HOW TO JOIN</h1>
         <article class="grid">
           <div>
